creación de portada con img e información, link de acceso a rrss con iconos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/92a36300ab.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/stylo.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
@@ -41,14 +41,64 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#Acerca-de-mi"
+            <a class="nav-link active" aria-current="page" href="#acerca-de-mi"
               >Acerca de mi</a
             >
-            <a class="nav-link" href="#Mis-trabajos">Mis trabajos</a>
-            <a class="nav-link" href="#Contacto">Contacto</a>
+            <a class="nav-link" href="#portafolio">Portafolio</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
       </div>
     </nav>
+    <header id="acerca-de-mi" class="portada">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-md-12 col-lg-5">
+            <div class="d-flex flex-column align-items-center gap-2">
+              <div>
+                <img src="./assets/img/imgportada.jpeg" class="img-portada" />
+              </div>
+              <div class="nombre">Pamela Maturana</div>
+              <div class="texto-portada">
+                <em
+                  >"Primero resuelve el problema. Después, escribe el
+                  código"</em
+                >
+              </div>
+              <div class="texto-portada">(John Johnson)</div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-5 contenedor-info">
+            <div class="saludo-titulo">¡Hola!</div>
+            <h1>Bienvenid@ a mi web</h1>
+            <div class="texto-portada mt-5">
+              Entusiasta del aprendizaje y actualmente inmersa en un apasionante
+              bootcamp. Aquí quiero compartir contigo mi experiencia y todo lo
+              que estoy aprendiendo en este viaje de transformación personal y
+              profesional.
+            </div>
+            <div class="row justify-content-start mt-5">
+              <div class="d-flex gap-4 align-items-start">
+                <a href="https://cl.linkedin.com/" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in fa-2x"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/pamee_maturana/?igshid=NTc4MTIwNjQ2YQ%3D%3D"
+                  target="_blank"
+                  ><i class="fa-brands fa-instagram fa-2x"></i
+                ></a>
+                <a href="https://twitter.com/pamelamaturana7" target="_blank">
+                  <i class="fa-brands fa-twitter fa-2x"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section id="portafolio"></section>
+
+    <section id="contacto"></section>
   </body>
 </html>
