seccion experiencia, bg color y texto

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#acerca-de-mi"
-              >Acerca de mi</a
+            <a class="nav-link active" aria-current="page" href="#experiencia"
+              >Experiencia</a
             >
             <a class="nav-link" href="#portafolio">Portafolio</a>
             <a class="nav-link" href="#contacto">Contacto</a>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </nav>
-    <header id="acerca-de-mi" class="portada">
+    <header class="portada">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-sm-12 col-md-12 col-lg-5">
@@ -65,13 +65,13 @@
                   código"</em
                 >
               </div>
-              <div class="texto-portada">(John Johnson)</div>
+              <div class="fw-light">(John Johnson)</div>
             </div>
           </div>
           <div class="col-sm-12 col-md-12 col-lg-5 contenedor-info">
             <div class="saludo-titulo">¡Hola!</div>
             <h1>Bienvenid@ a mi web</h1>
-            <div class="texto-portada mt-5">
+            <div class="fw-light mt-5">
               Entusiasta del aprendizaje y actualmente inmersa en un apasionante
               bootcamp. Aquí quiero compartir contigo mi experiencia y todo lo
               que estoy aprendiendo en este viaje de transformación personal y
@@ -96,6 +96,40 @@
         </div>
       </div>
     </header>
+
+    <section
+      id="experiencia"
+      class="text-center my-5 p-5 contenedor-experiencia"
+    >
+      <div class="row justify-content-center fs-1 mb-5">
+        <div class="col-10 text-center fw-bold fs-1 text-white">
+          Experiencia
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-5 text-end">
+          <h4 class="text-white">2021 a la fecha</h4>
+          <p>Psicóloga, Universidad de las Ámericas</p>
+        </div>
+        <div class="col-5 fw-light texto-experiencia">
+          <ul>
+            <li>
+              Psicología clínica. Atención de pacientes adolescentes y adultos.
+            </li>
+            <li>Atención individual, de pareja y/o familiar.</li>
+            <li>Proceso de diagnóstico y psicoterapéutico.</li>
+            <li>
+              Aplicación, interpretación de test y realización de informe.
+            </li>
+            <li>
+              Diseño del plan de intervención (DPI) y presentación del mismo.
+            </li>
+            <li>Ejecución del plan de intervención.</li>
+            <li>Fase de cierre del proceso, devolución y seguimiento.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <section id="portafolio"></section>
 
