creación seccion mis estudios y se invierte en orden con experiencia

--- a/index.html
+++ b/index.html
@@ -97,12 +97,65 @@
       </div>
     </header>
 
+    <section id="mis-estudios">
+        <div class="container-fluid py-5">
+          <div class="display-4 fw-bold text-center text-dark mb-5 pb-5">
+              Mis estudios
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="horizontal-timeline">
+                <ul class="list-inline items">
+                  <li class="list-inline-item items-list">
+                    <div class="px-4">
+                      <div class="event-date badge bg-dark">2003</div>
+                      <h5 class="pt-2">E. Básica</h5>
+                      <p class="text-muted">
+                        Graduación 8vo básico</p>
+                        <p>Colegio Teresiano San José. Comuna San Bernardo, Chile
+                      </p>
+                  </li>
+                  <li class="list-inline-item items-list">
+                    <div class="px-4">
+                      <div class="event-date badge bg-dark">2007</div>
+                      <h5 class="pt-2">E. Media</h5>
+                      <p class="text-muted">
+                          Graduación IV medio</p>
+                       <p> Liceo Maria Inmaculada. Comuna El Bosque, Chile
+                      </p>
+                  </li>
+                  <li class="list-inline-item items-list">
+                    <div class="px-4">
+                      <div class="event-date badge bg-dark">2017</div>
+                      <h5 class="pt-2">E. Universitaria</h5>
+                      <p class="text-muted">
+                          Título de Psicóloga y el Grado de Licenciada en Psicología 2022
+                      </p>
+                      <p>UDLA. Santiago, Chile</p>
+                     
+                  </li>
+                  <li class="list-inline-item items-list">
+                    <div class="px-4">
+                      <div class="event-date badge bg-dark">2022</div>
+                      <h5 class="pt-2">Diplomado</h5>
+                      <p class="text-muted">
+                        Estrategias clínicas de Terapia Breve en adultos.
+                      </p>
+                      <p>ADIPA</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <section
       id="experiencia"
       class="text-center my-5 p-5 contenedor-experiencia"
     >
       <div class="row justify-content-center fs-1 mb-5">
-        <div class="col-10 text-center fw-bold fs-1 text-white">
+        <div class="col-10 text-center fw-bold text-dark titulo-seccion">
           Experiencia
         </div>
       </div>
@@ -130,8 +183,89 @@
         </div>
       </div>
     </section>
+    
+    <section id="portafolio" class="my-5 p-5 bg-dark">
+        <h2 class="display-4 fw-bold text-center text-light mb-3">
+          Mis trabajos
+        </h2>
+  
+        <div class="row">
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_html.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">HTML</h5>
+                <p class="card-text">
+                  Primer acercamiento a la utilización de etiquetas html, con el
+                  uso de títulos, párrafos, listas e imágenes. Enlace funcional y
+                  tabla según las especificaciones solicitadas para el primer
+                  desafío.
+                </p>
+                <a href="html/" class="btn btn-outline-secondary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_css.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">CSS</h5>
+                <p class="card-text">
+                  Construcción de un landing page con la implementación de estilos
+                  CSS, para textos, color y fondo, para la definición de aspectos
+                  visuales de una interfaz web. Bordes, margen, padding y modelo
+                  de cajas.
+                </p>
+                <a href="css/" class="btn btn-outline-secondary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_flex.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">FLEX</h5>
+                <p class="card-text">
+                  Landing page a partir de maqueta siguiendo especificaciones
+                  definidas. Utilización de flexbox para crear galería de
+                  imágenes, sección de características y utilización de iconos
+                  desde font awasome.
+                </p>
+                <a href="flex/" class="btn btn-outline-secondary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_bootstrap.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">BOOTSTRAP</h5>
+                <p class="card-text">
+                  Implementación de sistema de grillas de Bootstrap, para pagina
+                  web adaptable a distintos dispositivos. Aplicación de
+                  componentes card, formularios y footer.
+                </p>
+                <a href="bootstrap/" class="btn btn-outline-secondary">Ver más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  
 
-    <section id="portafolio"></section>
+   
 
     <section id="contacto"></section>
   </body>
