--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
+            <a class="nav-link text-white" href="#inicio">Inicio</a>
             <a class="nav-link text-white" href="#experiencia">Experiencia</a>
             <a class="nav-link text-white" href="#educación">Educación</a>
             <a class="nav-link text-white" href="#portafolio">Mis trabajos</a>
@@ -49,23 +50,25 @@
         </div>
       </div>
     </nav>
-    <header id="front-page" class="portada">
+    <header id="inicio" class="portada front-page">
       <div class="container">
-        <div class="row justify-content-center" style="padding-top: 10rem">
+        <div class="row justify-content-center inicio">
           <div class="col-sm-12 col-md-12 col-lg-5">
             <div class="d-flex flex-column align-items-center gap-2">
               <div>
                 <img src="./assets/img/imgportada.jpeg" class="img-portada" />
               </div>
-              <div class="nombre">Pamela Maturana</div>
-              <div>
-                <div class="texto-portada">
-                  <em
-                    >"Primero resuelve el problema. Después, escribe el
-                    código"</em
-                  >
+              <div class="contenedor-nombre">
+                <div class="nombre">Pamela Maturana</div>
+                <div>
+                  <div class="texto-portada fw-light">
+                    <em
+                      >"Primero resuelve el problema. Después, escribe el
+                      código"</em
+                    >
+                  </div>
+                  <div class="fw-light text-center">(John Johnson)</div>
                 </div>
-                <div class="fw-light text-center">(John Johnson)</div>
               </div>
             </div>
           </div>
@@ -106,11 +109,11 @@
         Experiencia
       </div>
       <div class="row justify-content-center align-items-center">
-        <div class="col-5 text-end">
+        <div class="col-md-5 col-sm-12 text-end">
           <h4>2021 a la fecha</h4>
           <p>Psicóloga, Universidad de las Ámericas</p>
         </div>
-        <div class="col-5 fw-light texto-experiencia">
+        <div class="col-md-5 col-sm-12 fw-light texto-experiencia">
           <ul>
             <li>
               Psicología clínica. Atención de pacientes adolescentes y adultos.
@@ -195,118 +198,118 @@
       </div>
     </section>
 
-    <section id="portafolio" class="p-5 portafolio">
-      <div class="col-12 text-center fw-bold text-white titulo-seccion">
-        Mis trabajos
-      </div>
+    <section id="portafolio">
+      <div class="d-flex flex-column justify-content-center portafolio">
+        <div class="col-12 text-center fw-bold text-white titulo-seccion">
+          Mis trabajos
+        </div>
 
-      <div class="row">
-        <div class="col-12 col-sm-3 py-2">
-          <div class="card">
-            <div
-              class="image-top"
-              style="background-image: url(assets/img/img_html.jpeg)"
-            ></div>
-            <div class="card-body">
-              <h5 class="card-title fw-bold">HTML</h5>
-              <p class="card-text fw-light">
-                Primer acercamiento a la utilización de etiquetas html, con el
-                uso de títulos, párrafos, listas e imágenes. Enlace funcional y
-                tabla según las especificaciones solicitadas.
-              </p>
-              <a href="html/" class="btn btn-outline-primary">Ver más</a>
+        <div class="row">
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_html.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">HTML</h5>
+                <p class="card-text fw-light">
+                  Primer acercamiento a la utilización de etiquetas html, con el
+                  uso de títulos, párrafos, listas e imágenes. Enlace funcional
+                  y tabla según las especificaciones solicitadas.
+                </p>
+                <a href="html/" class="btn btn-outline-primary">Ver más</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-3 py-2">
-          <div class="card">
-            <div
-              class="image-top"
-              style="background-image: url(assets/img/img_css.jpeg)"
-            ></div>
-            <div class="card-body">
-              <h5 class="card-title fw-bold">CSS</h5>
-              <p class="card-text fw-light">
-                Construcción de un landing page con la implementación de estilos
-                CSS, para textos, color y fondo, para la definición de aspectos
-                visuales de una interfaz web. Modelo de cajas.
-              </p>
-              <a href="css/" class="btn btn-outline-primary">Ver más</a>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_css.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">CSS</h5>
+                <p class="card-text fw-light">
+                  Construcción de un landing page con la implementación de
+                  estilos CSS, para textos, color y fondo, para la definición de
+                  aspectos visuales de una interfaz web. Modelo de cajas.
+                </p>
+                <a href="css/" class="btn btn-outline-primary">Ver más</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-3 py-2">
-          <div class="card">
-            <div
-              class="image-top"
-              style="background-image: url(assets/img/img_flex.jpeg)"
-            ></div>
-            <div class="card-body">
-              <h5 class="card-title fw-bold">FLEX</h5>
-              <p class="card-text fw-light">
-                Landing page a partir de maqueta siguiendo especificaciones
-                definidas. Utilización de flexbox para crear galería de
-                imágenes, y utilización de iconos desde font awasome.
-              </p>
-              <a href="flex/" class="btn btn-outline-primary">Ver más</a>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_flex.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">FLEX</h5>
+                <p class="card-text fw-light">
+                  Landing page a partir de maqueta siguiendo especificaciones
+                  definidas. Utilización de flexbox para crear galería de
+                  imágenes, y utilización de iconos desde font awasome.
+                </p>
+                <a href="flex/" class="btn btn-outline-primary">Ver más</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-3 py-2">
-          <div class="card">
-            <div
-              class="image-top"
-              style="background-image: url(assets/img/img_bootstrap.jpeg)"
-            ></div>
-            <div class="card-body">
-              <h5 class="card-title fw-bold">BOOTSTRAP</h5>
-              <p class="card-text fw-light">
-                Implementación de sistema de grillas de Bootstrap, para pagina
-                web adaptable a distintos dispositivos. Aplicación de
-                componentes card, formularios y footer.
-              </p>
-              <a href="bootstrap/" class="btn btn-outline-primary">Ver más</a>
+          <div class="col-12 col-sm-3 py-2">
+            <div class="card">
+              <div
+                class="image-top"
+                style="background-image: url(assets/img/img_bootstrap.jpeg)"
+              ></div>
+              <div class="card-body">
+                <h5 class="card-title fw-bold">BOOTSTRAP</h5>
+                <p class="card-text fw-light">
+                  Implementación de sistema de grillas de Bootstrap, para pagina
+                  web adaptable a distintos dispositivos. Aplicación de
+                  componentes card, formularios y footer.
+                </p>
+                <a href="bootstrap/" class="btn btn-outline-primary">Ver más</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contacto" class="container my-5">
-      <div class="row flex-column align-items-center">
-        <div class="col-12 text-center fw-bold titulo-seccion">Contáctame</div>
-        <p class="col-10 text-center my-4">
-          ¡Gracias por visitar mi página! Si deseas obtener más información,
-          tienes alguna pregunta o simplemente quieres conectarte, utiliza el
-          formulario de contacto a continuación para enviarme un mensaje y te
-          responderé lo antes posible.
-        </p>
-      </div>
-      <form>
-        <div class="row flex-column align-items-center">
-          <div class="form-group mb-4 col-6">
-            <label class="mb-2">Nombre</label>
-            <input class="form-control" placeholder="Nombre" />
-          </div>
-
-          <div class="form-group mb-4 col-6">
-            <label class="mb-2">Correo electrónico</label>
-            <input class="form-control" placeholder="Correo electrónico" />
-          </div>
-
-          <div class="form-group col-6">
-            <label class="mb-2">Mensaje</label>
-            <textarea
-              class="form-control"
-              placeholder="Escribe aquí tu mensaje"
-            ></textarea>
-          </div>
-
-          <div class="my-3 text-end col-6">
-            <button class="btn btn-primary text-light">Enviar</button>
-          </div>
+    <section id="contacto">
+      <div class="d-flex flex-column justify-content-center front-page">
+        <div
+          class="row justify-content-center fw-bold titulo-seccion contenedor-nombre"
+        >
+          Contáctame
         </div>
-      </form>
+        <form>
+          <div class="row flex-column align-items-center p-5">
+            <div class="form-group mb-4 col-sm-12 col-md-6">
+              <label class="mb-2">Nombre</label>
+              <input class="form-control" placeholder="Nombre" />
+            </div>
+
+            <div class="form-group mb-4 col-sm-12 col-md-6">
+              <label class="mb-2">Correo electrónico</label>
+              <input class="form-control" placeholder="Correo electrónico" />
+            </div>
+
+            <div class="form-group col-sm-12 col-md-6">
+              <label class="mb-2">Mensaje</label>
+              <textarea
+                class="form-control"
+                placeholder="Escribe aquí tu mensaje"
+              ></textarea>
+            </div>
+
+            <div class="my-3 text-end col-sm-12 col-md-6">
+              <button class="btn btn-primary text-light">Enviar</button>
+            </div>
+          </div>
+        </form>
+      </div>
     </section>
   </body>
 </html>
