se agregan carpetas de proyectos html, css, flex y bootstrap

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div
         class="d-flex flex-column justify-content-center bg-white contenedor-educacion"
       >
-        <div class="col-12 text-center fw-bold titulo-seccion mb-5">
+        <div class="col-12 text-center fw-bold titulo-seccion mb-5 pb-4">
           Mis estudios
         </div>
         <div class="row">
@@ -200,7 +200,7 @@
 
     <section id="portafolio">
       <div class="d-flex flex-column justify-content-center portafolio">
-        <div class="col-12 text-center fw-bold text-white titulo-seccion">
+        <div class="col-12 text-center fw-bold text-white titulo-seccion pb-3">
           Mis trabajos
         </div>
 
@@ -311,5 +311,13 @@
         </form>
       </div>
     </section>
+    <footer class="text-center text-light p-4 bg-footer">
+      <p class="mb-0">
+        Pamela Maturana Vergara 2023. Todos los derechos reservados.
+      </p>
+      <a href="https://github.com/pamemv" target="_blank"
+        ><i class="fa-brands fa-github fa-2x" style="color: #fbfcfe"></i
+      ></a>
+    </footer>
   </body>
 </html>
