--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-md-5 col-sm-12 text-end">
           <h4>2021 a la fecha</h4>
-          <p>Psicóloga, Universidad de las Ámericas</p>
+          <p>Psicóloga, Universidad de las Ámericas.</p>
         </div>
         <div class="col-md-5 col-sm-12 fw-light texto-experiencia">
           <ul>
@@ -152,7 +152,7 @@
                     <h5 class="pt-2">E. Básica</h5>
                     <p class="text-muted">Graduación 8vo básico</p>
                     <p>
-                      Colegio Teresiano San José. Comuna San Bernardo, Chile
+                      Colegio Teresiano San José. Comuna San Bernardo, Chile.
                     </p>
                   </div>
                 </li>
@@ -163,7 +163,7 @@
                     </div>
                     <h5 class="pt-2">E. Media</h5>
                     <p class="text-muted">Graduación IV medio</p>
-                    <p>Liceo Maria Inmaculada. Comuna El Bosque, Chile</p>
+                    <p>Liceo Maria Inmaculada. Comuna El Bosque, Chile.</p>
                   </div>
                 </li>
                 <li class="list-inline-item items-list">
@@ -176,7 +176,7 @@
                       Título de Psicóloga y el Grado de Licenciada en Psicología
                       2022
                     </p>
-                    <p>UDLA. Santiago, Chile</p>
+                    <p>UDLA. Santiago, Chile.</p>
                   </div>
                 </li>
                 <li class="list-inline-item items-list">
