cambios en funcionalidad navbar

--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
     />
     <title>Document</title>
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/92a36300ab.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-color">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbar-color">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <h2 class="img-fluid text-white">Curriculum</h2>
+          <h2>Curriculum</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -41,11 +46,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link text-white" href="#inicio">Inicio</a>
-            <a class="nav-link text-white" href="#experiencia">Experiencia</a>
-            <a class="nav-link text-white" href="#educación">Educación</a>
-            <a class="nav-link text-white" href="#portafolio">Mis trabajos</a>
-            <a class="nav-link text-white" href="#contacto">Contacto</a>
+            <a class="nav-link active" aria-current="page" href="#inicio"
+              >Inicio</a
+            >
+            <a class="nav-link" href="#experiencia">Experiencia</a>
+            <a class="nav-link" href="#educación">Educación</a>
+            <a class="nav-link" href="#portafolio">Mis trabajos</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
       </div>
