se agrega propiedad target a las card de portafolio y se modifica ruta de proyectos de mis trabajos

--- a/index.html
+++ b/index.html
@@ -225,7 +225,12 @@
                   uso de títulos, párrafos, listas e imágenes. Enlace funcional
                   y tabla según las especificaciones solicitadas.
                 </p>
-                <a href="html/" class="btn btn-outline-primary">Ver más</a>
+                <a
+                  href="html/index.html"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                  >Ver más</a
+                >
               </div>
             </div>
           </div>
@@ -242,7 +247,12 @@
                   estilos CSS, para textos, color y fondo, para la definición de
                   aspectos visuales de una interfaz web. Modelo de cajas.
                 </p>
-                <a href="css/" class="btn btn-outline-primary">Ver más</a>
+                <a
+                  href="css/index.html"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                  >Ver más</a
+                >
               </div>
             </div>
           </div>
@@ -259,7 +269,12 @@
                   definidas. Utilización de flexbox para crear galería de
                   imágenes, y utilización de iconos desde font awasome.
                 </p>
-                <a href="flex/" class="btn btn-outline-primary">Ver más</a>
+                <a
+                  href="flex/index.html"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                  >Ver más</a
+                >
               </div>
             </div>
           </div>
@@ -276,7 +291,12 @@
                   web adaptable a distintos dispositivos. Aplicación de
                   componentes card, formularios y footer.
                 </p>
-                <a href="bootstrap/" class="btn btn-outline-primary">Ver más</a>
+                <a
+                  href="bootstrap/index.html"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                  >Ver más</a
+                >
               </div>
             </div>
           </div>
