se cambia icono github de footer a seccion inicio

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 <a href="https://twitter.com/pamelamaturana7" target="_blank">
                   <i class="fa-brands fa-twitter fa-2x"></i
                 ></a>
+                <a href="https://github.com/pamemv" target="_blank"
+                  ><i class="fa-brands fa-github fa-2x"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -342,9 +345,6 @@
       <p class="mb-0">
         Pamela Maturana Vergara 2023. Todos los derechos reservados.
       </p>
-      <a href="https://github.com/pamemv" target="_blank"
-        ><i class="fa-brands fa-github fa-2x" style="color: #fbfcfe"></i
-      ></a>
     </footer>
   </body>
 </html>
